--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
-  <title>关于我 - 我的数学博客</title>
+  <title>About me - TomoriNao's Weblog</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 </head>
@@ -18,10 +18,10 @@
   </nav>
 
   <section>
-    <h2>关于我</h2>
-    <p>你好，我是某某，数学系本科生。</p>
-    <p>兴趣包括数学竞赛、游戏和轻日常萌系动漫。</p>
-    <p>在这里分享我的学习笔记和生活点滴，欢迎交流！</p>
+    <h2></h2>
+<p> 定义域：数学系本科生 ； 值域：尚未确定</p>
+<p> 兴趣是「收敛」于数学、游戏与轻日常萌系动漫的调和分析。</p>
+<p> 在此尝试建立一个从学习笔记到生活碎片的连续映射，欢迎来到我的邻域！</p>
   </section>
 
   <audio id="bgm" src="music.mp3" loop autoplay muted></audio>
