--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
 
   <meta charset="UTF-8">
-  <title>首页 - 我的数学博客</title>
+  <title>home - TomoriNao's Weblog</title>
   <link rel="stylesheet" href="style.css">
   <!-- Live2D 看板娘 -->
   <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
@@ -22,7 +22,7 @@
 
   <!-- 内容 -->
   <header>
-    <h1>欢迎来到我的数学博客！</h1>
+    <h1>欢迎来到TomoriNao的个人网页！</h1>
     <p>这里记录数学题解、书籍推荐和个人兴趣分享。</p>
   </header>
 
