--- a/solutions.html
+++ b/solutions.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
 
   <meta charset="UTF-8">
-  <title>题解区 - 我的数学博客</title>
+  <title>Problem Solving - TomoriNao's Weblog</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 </head>
