--- a/books.html
+++ b/books.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
 
   <meta charset="UTF-8">
-  <title>书籍推荐 - 我的数学博客</title>
+  <title>Book recommendation - TomoriNao's Weblog</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 </head>
