--- a/solutions.html
+++ b/solutions.html
@@ -4,6 +4,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,600&display=swap" rel="stylesheet">
 
   <meta charset="UTF-8">
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <title>Problem Solving - TomoriNao's Weblog</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
@@ -22,9 +23,13 @@
     <h2>题解区</h2>
     <div class="card">
       <h3>题目 1</h3>
+      <p>Let \(A\) and \(B\) be \(3 \times 3\) matrices. Prove that
+\[
+\det(AB - BA) = \frac{1}{3} \operatorname{tr}\left((AB - BA)^3\right).
+\]</p>
       <details>
         <summary>展开解答</summary>
-        <p>这是详细解答……</p>
+        <p>取\(AB-BA=X\)的特征多项式\(f\),则有\(f(X)=0\),两边同时取迹，Note that \(tr(X)=0\),问题得证  </p>
       </details>
     </div>
     <div class="card">
