--- a/books.html
+++ b/books.html
@@ -32,9 +32,13 @@
     </div>
   </section>
 
-  <audio id="bgm" src="music.mp3" loop autoplay muted></audio>
-  <button id="audioBtn">播放音乐</button>
+<audio id="bgm" autoplay loop >
+  <source src="bgm.mp3" type="audio/mpeg">
+</audio>
 
-  <script src="script.js"></script>
+<button id="playBtn">🎵</button>
+
+<script src="bgm.js"></script>
+
 </body>
 </html>
